--- a/test.html
+++ b/test.html
@@ -3,19 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Currency</title>
+
+  <title>Komis Samochodowy</title>
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="app.js" defer></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+  <header>
+    <h1>Witamy w komisie samochodowym</h1>
+  </header>
   <div id="app">
-    <section v-if="error_occured">
-      ERROR: Something went wrong!
-    </section>
-    <section v-else>
+    <h2>Dostępne Marki</h2>
+    <button v-on:click="fetch(), toggle=!toggle">Wyświetl dostępne samochody</button>
+    <div v-show='toggle'>
       <div v-if="loading_page">
         Loading page...
       </div>
@@ -24,46 +28,15 @@
           <tr>
             <th>Make</th>
             <th>Model</th>
-            <th>Year</th>
-            <th>VIN</th>
-            <th>FuelType</th>
-            <th>Capacity</th>
-            <th>Status</th>
-            <th>Drive</th>
-            <th>Gearbox</th>
-            <th>Price</th>
           </tr>
           <tr v-for="item in currency">
             <td>{{ item.Make }}</td>
             <td>{{ item.Model }}</td>
-            <td>{{ item.Year }}</td>
-            <td>{{ item.VIN }}</td>
-            <td>{{ item.FuelType }}</td>
-            <td>{{ item.Capacity }}</td>
-            <td>{{ item.Status }}</td>
-            <td>{{ item.Drive }}</td>
-            <td>{{ item.Gearbox }}</td>
-            <td>{{ item.Price }}</td>
           </tr>
         </table>
       </div>
-    </section>
+    </div>
   </div>
-
-  <style>
-    #app {
-        /* margin: auto; */
-        width: 2200px;
-        font-size: 25px;
-    }
-    table, th, td {
-      border: 2px solid black;
-      border-collapse: collapse;
-    }
-    th, td {
-      padding: 15px;
-    }
-  </style>
 </body>
 
 </html>
