--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
   <header>
     <h1>Witamy w komisie samochodowym</h1>
     <div class="topnav">
@@ -45,8 +46,10 @@
         </table>
       </div>
     </div>
+    {{currency}}
   </div>
   </div>
+
 </body>
 
 </html>
