--- a/test.html
+++ b/test.html
@@ -24,12 +24,11 @@
       <a href="#about">O nas</a>
     </div>
   </header>
-
   <div id="app">
-    <button v-on:click="fetch()">Wyświetl dostępne samochody1</button>
+    <h2>Dostępne Marki</h2>
     <button v-on:click="fetch(), toggle=!toggle">Wyświetl dostępne samochody</button>
+    <button v-on:click="fetch(), make_list(), search.toggle=!search.toggle">Wyszukaj samochód</button>
     <div v-show='toggle'>
-      <h2>Dostępne Marki</h2>
       <div v-if="loading_page">
         Loading page...
       </div>
@@ -46,8 +45,80 @@
         </table>
       </div>
     </div>
-    {{currency}}
-  </div>
+    <div v-show='search.toggle'>
+      <h2>Wyszukaj swój nowy samochód</h2>
+    <div class="form">
+    <p>Marka samochodu:
+    <select v-model="search.Make">
+      <option disabled value="">Wybierz:</option>
+      <option v-for="item in brand_list">{{ item }}</option>
+    </select></p>
+    <p>Stan:
+      <input type="checkbox" id="s1" value="New" v-model="search.Status">
+      <label for="s1">Nowy</label><br>
+      <input type="checkbox" id="s2" value="Used" v-model="search.Status">
+      <label for="s2">Uzywany</label><br>
+    </p>
+    <p>Rodzaj paliwa:<br>
+      <input type="checkbox" id="f1" value="Gasoline" v-model="search.FuelType">
+      <label for="f1">Benzyna</label><br>
+      <input type="checkbox" id="f2" value="Hybrid" v-model="search.FuelType">
+      <label for="f2">Hybryda</label><br>
+      <input type="checkbox" id="f3" value="Disel" v-model="search.FuelType">
+      <label for="f3">Disel</label><br>
+      <input type="checkbox" id="f4" value="Electric" v-model="search.FuelType">
+      <label for="f4">Elektryczny</label><br>
+      <input type="checkbox" id="f5" value="Gasoline + LPG" v-model="search.FuelType">
+      <label for="f5">Benzyna + LPG</label><br>
+    </p>
+    <p>Napęd:
+      <input type="checkbox" id="d1" value="Front" v-model="search.Drive">
+      <label for="d1">Na przód</label><br>
+      <input type="checkbox" id="d2" value="Rear" v-model="search.Drive">
+      <label for="d2">Na tył</label><br>
+      <input type="checkbox" id="d3" value="4x4" v-model="search.Drive">
+      <label for="d3">Na 4 koła</label><br>
+    </p>
+    p>Skrzynia biegów:
+      <input type="checkbox" id="g1" value="Automatic" v-model="search.Gearbox">
+      <label for="g1">Automatyczna</label><br>
+      <input type="checkbox" id="g2" value="Manual" v-model="search.Gearbox">
+      <label for="g2">Manualna</label><br>
+    </p>
+    <input type="button" class="btn btn-primary" v-on:click="filter()" value="Szukaj">
+    </div>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <td><b>Marka</b></td>
+          <td><b>Model</b></td> 
+          <td><b>Rocznik</b></td>
+          <td><b>VIN</b></td>
+          <td><b>Rodzaj paliwa</b></td>
+          <td><b>Pojemność</b></td>
+          <td><b>Stan</b></td>
+          <td><b>Rodzaj napędu</b></td>
+          <td><b>Skrzynia biegów</b></td>
+          <td><b>Cena</b></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="item in filteredCurrency"> 
+          <td> {{item.Make}} </td>
+          <td> {{item.Model}} </td>
+          <td> {{item.Year}} </td>
+          <td> {{item.VIN}} </td>
+          <td> {{item.FuelType}} </td>
+          <td> {{item.Capacity}} </td>
+          <td> {{item.Status}} </td>
+          <td> {{item.Drive}} </td>
+          <td> {{item.Gearbox}} </td>
+          <td> {{item.Price}} </td>
+        </tr>
+       </tbody>
+    </table>
+    </div>
   </div>
 
 </body>
